<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UmbLoginActivity">

    <TextView
        android:id="@+id/tvText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvText_text"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.249"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.29" />

    <EditText
        android:id="@+id/edtId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/edtId_hint"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="@+id/tvText"
        app:layout_constraintTop_toBottomOf="@+id/tvText" />

    <EditText
        android:id="@+id/edtPw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/edtPw_hint"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/edtId"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/edtId"
        app:layout_constraintTop_toBottomOf="@+id/edtId" />

    <Button
        android:id="@+id/btnJoin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="10dp"
        android:text="@string/btnJoin_text"
        app:layout_constraintStart_toStartOf="@+id/tvText"
        app:layout_constraintTop_toBottomOf="@+id/auto" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/btnLogin_text"
        app:layout_constraintBottom_toBottomOf="@+id/btnJoin"
        app:layout_constraintStart_toEndOf="@+id/btnJoin"
        app:layout_constraintTop_toTopOf="@+id/btnJoin" />

    <CheckBox
        android:id="@+id/auto"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginTop="10dp"
        android:text="@string/auto_text"
        app:layout_constraintEnd_toEndOf="@+id/edtPw"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/edtPw"
        app:layout_constraintTop_toBottomOf="@+id/edtPw" />

</androidx.constraintlayout.widget.ConstraintLayout>