<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UmbMainActivity">

    <TextView
        android:id="@+id/tvUser1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.022" />

    <TextView
        android:id="@+id/tvUser2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/tvUser2_text"
        app:layout_constraintBottom_toBottomOf="@+id/tvUser1"
        app:layout_constraintStart_toEndOf="@+id/tvUser1"
        app:layout_constraintTop_toTopOf="@+id/tvUser1" />

    <TextView
        android:id="@+id/tvUserPoint1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/tvPoint1_text"
        app:layout_constraintBottom_toBottomOf="@+id/tvUser2"
        app:layout_constraintStart_toEndOf="@+id/tvUser2"
        app:layout_constraintTop_toTopOf="@+id/tvUser2" />

    <TextView
        android:id="@+id/tvUserPoint2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="TextView"
        app:layout_constraintBottom_toBottomOf="@+id/tvUserPoint1"
        app:layout_constraintStart_toEndOf="@+id/tvUserPoint1"
        app:layout_constraintTop_toTopOf="@+id/tvUserPoint1" />

    <Button
        android:id="@+id/btnMypage"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:text="@string/btnMypage_text"
        app:layout_constraintStart_toStartOf="@+id/tvUser1"
        app:layout_constraintTop_toBottomOf="@+id/tvUser1" />

    <Button
        android:id="@+id/btnLogout"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginStart="10dp"
        android:text="@string/btnLogout_text"
        app:layout_constraintBottom_toBottomOf="@+id/btnMypage"
        app:layout_constraintStart_toEndOf="@+id/btnMypage"
        app:layout_constraintTop_toTopOf="@+id/btnMypage" />
</androidx.constraintlayout.widget.ConstraintLayout>